{
  "version": 4,
  "terraform_version": "1.10.1",
  "serial": 32,
  "lineage": "f5587746-189d-37e5-dc52-03578afbcfac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "def-internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-020ecaf1a71eca15d",
            "id": "r-rtb-0d2e35f6565c4524c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2e35f6565c4524c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pod-k8s-eventos",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.37.128.0/17",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04206bbccd8a7252d1024883805",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04206bbccd8a7252d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0b729d487e581b734",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.hub-rt-internal-prod-vpc-inspection",
            "aws_vpc.vpc-hub-inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "privado",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.1.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04206bbccd8a7252d3874451722",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04206bbccd8a7252d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0b729d487e581b734",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.hub-rt-internal-prod-vpc-inspection",
            "aws_vpc.vpc-hub-inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rfc1918",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04206bbccd8a7252d3423270202",
            "instance_id": "i-058a8c8377781c5c5",
            "instance_owner_id": "593793044060",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-048ec197c69832ce5",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04206bbccd8a7252d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.hub-rt-internal-prod-vpc-inspection",
            "aws_vpc.vpc-hub-inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "to-dispositivo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/8",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0885790e0f4963e3b3423270202",
            "instance_id": "i-058a8c8377781c5c5",
            "instance_owner_id": "593793044060",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-048ec197c69832ce5",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0885790e0f4963e3b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ztna-sp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.27.7.0/24",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04206bbccd8a7252d4120562498",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04206bbccd8a7252d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "tgw-0b729d487e581b734",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.hub-rt-internal-prod-vpc-inspection",
            "aws_vpc.vpc-hub-inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "default-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:route-table/rtb-0885790e0f4963e3b",
            "id": "rtb-0885790e0f4963e3b",
            "owner_id": "593793044060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-048ec197c69832ce5",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default-rt-vpc-hub-inspection"
            },
            "tags_all": {
              "Name": "default-rt-vpc-hub-inspection"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hub-rt-external-az1-prod-vpc-inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:route-table/rtb-0d2e35f6565c4524c",
            "id": "rtb-0d2e35f6565c4524c",
            "owner_id": "593793044060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020ecaf1a71eca15d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hub-rt-external-az1-prod-vpc-inspection"
            },
            "tags_all": {
              "Name": "hub-rt-external-az1-prod-vpc-inspection"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hub-rt-external-az2-prod-vpc-inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:route-table/rtb-07919712286c33c64",
            "id": "rtb-07919712286c33c64",
            "owner_id": "593793044060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-020ecaf1a71eca15d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hub-rt-external-az2-prod-vpc-inspection"
            },
            "tags_all": {
              "Name": "hub-rt-external-az2-prod-vpc-inspection"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hub-rt-internal-prod-vpc-inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:route-table/rtb-04206bbccd8a7252d",
            "id": "rtb-04206bbccd8a7252d",
            "owner_id": "593793044060",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/8",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-048ec197c69832ce5",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.27.7.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0b729d487e581b734",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.37.128.0/17",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "tgw-0b729d487e581b734",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hub-rt-internal-prod-vpc-inspection"
            },
            "tags_all": {
              "Name": "hub-rt-internal-prod-vpc-inspection"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-hub-inspection"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tgw-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:route-table/rtb-08beb46a88998f03d",
            "id": "rtb-08beb46a88998f03d",
            "owner_id": "593793044060",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hub-rt-tgw-prod-vpc-inspection"
            },
            "tags_all": {
              "Name": "hub-rt-tgw-prod-vpc-inspection"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lan-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8146ca1a3306182",
            "route_table_id": "rtb-04206bbccd8a7252d",
            "subnet_id": "subnet-00058cb92a4140cf4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lan-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef793e61d1111ef0",
            "route_table_id": "rtb-04206bbccd8a7252d",
            "subnet_id": "subnet-0c9d2a401b4d52b24"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wan-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baf58a18dbb889cc",
            "route_table_id": "rtb-0d2e35f6565c4524c",
            "subnet_id": "subnet-035aa35052dd884ca"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wan-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077d2fd491091f748",
            "route_table_id": "rtb-07919712286c33c64",
            "subnet_id": "subnet-0a36c7bb983f5943a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hasync-hamgmt-az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:subnet/subnet-084ddeebbb93c52ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.27.20.64/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084ddeebbb93c52ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593793044060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hasync-hamgmt-az1"
            },
            "tags_all": {
              "Name": "hasync-hamgmt-az1"
            },
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hasync-hamgmt-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:subnet/subnet-080a121b44122140c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.27.20.80/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080a121b44122140c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593793044060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hasync-hamgmt-az2"
            },
            "tags_all": {
              "Name": "hasync-hamgmt-az2"
            },
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet-lan-fgt-use1-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:subnet/subnet-0c9d2a401b4d52b24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.27.18.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9d2a401b4d52b24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593793044060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-lan-fgt-use1-1"
            },
            "tags_all": {
              "Name": "snet-lan-fgt-use1-1"
            },
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet-lan-fgt-use1-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:subnet/subnet-00058cb92a4140cf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.27.19.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00058cb92a4140cf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593793044060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-lan-fgt-use1-2"
            },
            "tags_all": {
              "Name": "snet-lan-fgt-use1-2"
            },
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet-tgw-att-use1-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:subnet/subnet-0cc2bb81030aa1ed8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.27.20.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc2bb81030aa1ed8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593793044060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-tgw-att-use1-1"
            },
            "tags_all": {
              "Name": "snet-tgw-att-use1-1"
            },
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet-tgw-att-use1-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:subnet/subnet-093ad655e05ec031f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.27.20.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093ad655e05ec031f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593793044060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-tgw-att-use1-2"
            },
            "tags_all": {
              "Name": "snet-tgw-att-use1-2"
            },
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet-wan-fgt-use1-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:subnet/subnet-035aa35052dd884ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.27.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035aa35052dd884ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593793044060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-wan-fgt-use1-1"
            },
            "tags_all": {
              "Name": "snet-wan-fgt-use1-1"
            },
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet-wan-fgt-use1-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:subnet/subnet-0a36c7bb983f5943a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.27.17.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a36c7bb983f5943a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "593793044060",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snet-wan-fgt-use1-2"
            },
            "tags_all": {
              "Name": "snet-wan-fgt-use1-2"
            },
            "vpc_id": "vpc-0b13f3cdb939a1d5e"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-hub-inspection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:593793044060:vpc/vpc-0b13f3cdb939a1d5e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.27.16.0/21",
            "default_network_acl_id": "acl-00b02f7fe613aec13",
            "default_route_table_id": "rtb-0885790e0f4963e3b",
            "default_security_group_id": "sg-07c51337f2fb6e0f6",
            "dhcp_options_id": "dopt-095ce03475df9b745",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b13f3cdb939a1d5e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0885790e0f4963e3b",
            "owner_id": "593793044060",
            "tags": {
              "Name": "vpc-hub-inspection",
              "managed-by-ipam": "false"
            },
            "tags_all": {
              "Name": "vpc-hub-inspection",
              "managed-by-ipam": "false"
            }
          }
        }
      ]
    }
  ]
}